set height of column to 100% to ensure fullscreen on mobile

--- a/app_web/src/ui/sass.scss
+++ b/app_web/src/ui/sass.scss
@@ -294,6 +294,7 @@ button.button
 
 .column {
     padding: 0px;
+    height: 100%;
 }
 
 #canvas {
